--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -1,26 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Submit Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Local Host</title>
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            height: 100vh;
+            gap: 20px;
+        }
+
+        form {
+            display: flex; /* Ensure the form itself uses flexbox */
+            gap: 20px; /* Space between the two boxes */
+        }
+
+        .left-box, .right-box {
+            background-color: #b0b0b0;
+            padding: 20px;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            width: 350px; /* Fixed width for both boxes */
+            margin-top: 100px;
+        }
+
+        input[type="text"] {
+            background-color: #e0e0e0;
+            border: none;
+            border-radius: 8px;
+            padding: 10px;
+            width: 100%; /* Full width of the box */
+            font-size: 16px;
+            outline: none;
+            margin-bottom: 10px;
+        }
+
+        label {
+            font-size: 14px;
+            font-weight: bold;
+            color: #666;
+        }
+
+        #userprompt {
+            height: 100px; /* Height for the prompt input */
+        }
+
+        input[type="submit"] {
+            background-color: #fff;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            align-self: flex-start; /* Align submit button to the start of the form */
+            margin-top: 20px; /* Space above the submit button */
+        }
+    </style>
 </head>
 <body>
 
-<h1>Welcome to the Form</h1>
-<form action="/MyServlet" method="POST">
-    <label for="userprompt">Prompt:</label><br>
-    <input type="text" id="userprompt" name="userprompt" value="Prompt"><br>
+<div class="container">
+    <form action="/MyServlet" method="POST">
+        <div class="left-box">
+            <label for="userprompt">Prompt:</label>
+            <textarea type="text" id="userprompt" name="userprompt" value="Prompt"></textarea>
+            <input type="submit" value="Submit"> <!-- Submit button within the form -->
+        </div>
+        <div class="right-box">
+            <label for="parameters">Parameters:</label>
+            <input type="text" id="parameters" name="parameters" value="parameters">
 
-    <label for="parameters">parameters:</label><br>
-    <input type="text" id="parameters" name="parameters" value="parameters"><br><br>
+            <label for="output">Output:</label>
+            <input type="text" id="output" name="output" value="output">
+        </div>
+    </form>
+</div>
 
-    <label for="output">output:</label><br>
-    <input type="text" id="output" name="output" value="output"><br>
+</body>
+</html>
 
-<!--    <input type="hidden" name="session_id" value="">-->
-
-    <input type="submit" value="Submit">
-</form>
 
 <!--<script>-->
 <!--    document.getElementById('myForm').addEventListener('submit', function(event) {-->
@@ -42,8 +112,6 @@
 <!--</script>-->
 
 
-</body>
-</html>
 
 <!--<h2>or enter your own code to be tested:</h2>-->
 <!--<form action="/userIDE" method="POST">-->
