--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
@@ -118,7 +118,7 @@
 </head>
 <body>
 <h1>Code Editor</h1>
-<p>name = input("input")
+<p>name = input("input") <br>
     print(name)</p>
 <textarea id="usercode" placeholder="Enter your Python code here..." rows="5" cols="80"></textarea><br>
 
@@ -128,7 +128,7 @@
 <h2>Conversation</h2>
 <textarea id="conversation" readonly></textarea><br>
 
-<h2>User Input (for interacting with the running code)</h2>
+<h2>User Input</h2>
 <textarea id="userinput" placeholder="Enter input to interact with the code..." rows="3" cols="80"></textarea><br>
 
 <button id="sendInputButton" onclick="sendInput()">Send Input</button>
